# BigHeroX-msg

./: .gitignore  CMakeLists.txt  LICENSE  README.md  design.md  package.xml
action/: DynamicKick.action  PlayAnimation.action
msg/: Animation.msg  DynupEngineDebug.msg  FieldFeature.msg  FieldFeatureArray.msg  HeadMode.msg  JointCommand.msg  JointState.msg  KickDebug.msg  KickGoal.msg  MotionCommand.msg  RobotControlState.msg  RobotRelative.msg  RobotRelativeArray.msg  Strategy.msg  TeamData.msg  WalkEngineDebug.msg
